@@ -2,13 +2,29 @@ require 'dl'
 require 'thread'
 
 module DL
-  SEM = Mutex.new
+	# The mutual exclusion (Mutex) semaphore for the DL module
+  SEM = Mutex.new # :nodoc:
 
   if DL.fiddle?
-    CdeclCallbackProcs = {}
-    CdeclCallbackAddrs = {}
-    StdcallCallbackProcs = {}
-    StdcallCallbackAddrs = {}
+    # A Hash of callback Procs
+    #
+    # Uses Fiddle
+    CdeclCallbackProcs = {} # :nodoc:
+
+    # A Hash of the addresses of callback Proc
+    #
+    # Uses Fiddle
+    CdeclCallbackAddrs = {} # :nodoc:
+
+    # A Hash of Stdcall callback Procs
+    #
+    # Uses Fiddle on win32
+    StdcallCallbackProcs = {} # :nodoc:
+
+    # A Hash of the addresses of Stdcall callback Procs
+    #
+    # Uses Fiddle on win32
+    StdcallCallbackAddrs = {} # :nodoc:
   end
 
   def set_callback_internal(proc_entry, addr_entry, argc, ty, abi = nil, &cbp)
